# STUOAReader

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  env.example  example.html  example.py  main.py  pyproject.toml  run.sh  原型.html
OAP-app/: .env.example  app.json  eas.json  package-lock.json  package.json  原型.html
OAP-app/app/: _layout.tsx  _layout.web.tsx  login.tsx  modal.tsx
OAP-app/components/: ambient-background.tsx  article-card.tsx  article-detail-sheet.tsx  bottom-dock.tsx  chat-input.tsx  chat-message.tsx  external-link.tsx  haptic-tab.tsx  hello-wave.tsx  home-empty-state.tsx  home-loading-state.tsx  parallax-scroll-view.tsx  source-card.tsx  source-list.tsx  themed-text.tsx  themed-view.tsx  thinking-indicator.tsx  top-bar.tsx
OAP-app/constants/: palette.ts  theme.ts
OAP-app/hooks/: use-ai-chat.ts  use-articles.ts  use-auth-token.ts  use-mermaid.ts  (+5 more)
api/: app.py
backend/: Dockerfile  app.py  config.py  db.py  docker-compose.yml  env.example  pyproject.toml
backend/models/: auth.py
backend/repository/: user_repository.py
backend/routes/: ai.py  articles.py  auth.py
backend/scripts/: create_admin_user.py
backend/services/: auth_service.py  campus_auth.py  cas_client.py
config/: config.py
crawler/: __init__.py  cache.py  config.py  db.py  embeddings.py  env.example  fetcher.py  main.py  models.py  pipeline.py  pyproject.toml  run.sh  storage.py  summarizer.py
docs/: api_documentation.md  configuration.md  deployment.md  development_plan.md  eas_build.md  redis_cache_strategy.md  workflow_analysis.md
sender/: Sender.py
spider/: OAP.py
(+30 files in other folders)
